--- a/app/globals.css
+++ b/app/globals.css
@@ -41,6 +41,14 @@ body {
       animation-timing-function: cubic-bezier(0,0,0.2,1);
   }
 }
+@keyframes reveal {
+  from{
+    opacity: 0;
+  }
+  to{
+    opacity: 1;
+  }
+}
 *{
   @apply box-border
 }
